[gd_scene load_steps=9 format=3 uid="uid://dcdjonkjbxh0r"]

[ext_resource type="Script" path="res://Scenes/Common/Characters/customer.gd" id="1_ljmpa"]
[ext_resource type="Texture2D" uid="uid://dxjl86xa2pcep" path="res://Characters/Handler/handler.png" id="2_topkw"]
[ext_resource type="Shader" path="res://Scenes/Common/Characters/character_cafe.gdshader" id="3_645i4"]
[ext_resource type="Script" path="res://Scripts/StateMachine/Customer/customer_state_machine.gd" id="4_ulwlg"]
[ext_resource type="Script" path="res://Scripts/StateMachine/Customer/walking.gd" id="5_uc7lx"]
[ext_resource type="Script" path="res://Scripts/StateMachine/Customer/idle.gd" id="6_41h4p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_noaim"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_645i4")
shader_parameter/modulate_color = Color(0.5, 0.5, 0.5, 0.5)
shader_parameter/modulate_strength = 0.0
shader_parameter/albedo_texture = ExtResource("2_topkw")

[sub_resource type="BoxShape3D" id="BoxShape3D_yhs0y"]
size = Vector3(0.718506, 2.19766, 0.293945)

[node name="Customer" type="Node3D" node_paths=PackedStringArray("visual_node", "state_machine")]
script = ExtResource("1_ljmpa")
character_texture = ExtResource("2_topkw")
visual_node = NodePath("Visual")
state_machine = NodePath("CustomerStateMachine")

[node name="SpeechLocation" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.194373, 1.92046, 0)

[node name="Visual" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="Visual"]
material_override = SubResource("ShaderMaterial_noaim")
centered = false
offset = Vector2(-64, 0)
pixel_size = 0.0068
shaded = true
texture_filter = 0
texture = ExtResource("2_topkw")

[node name="CustomerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_ulwlg")
initial_state = NodePath("Idle")

[node name="Walking" type="Node" parent="CustomerStateMachine"]
script = ExtResource("5_uc7lx")

[node name="Idle" type="Node" parent="CustomerStateMachine"]
script = ExtResource("6_41h4p")

[node name="CollisionArea" type="Area3D" parent="."]

[node name="CollisionShape" type="CollisionShape3D" parent="CollisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10182, 0)
shape = SubResource("BoxShape3D_yhs0y")

[connection signal="changed_paths" from="." to="CustomerStateMachine/Idle" method="_on_path_start"]
[connection signal="start_walking" from="." to="CustomerStateMachine/Idle" method="_on_start_walking"]
[connection signal="stop_walking" from="." to="CustomerStateMachine/Walking" method="_on_stop_walking"]
